syntax = "proto3";

option csharp_namespace = "MarketIntelligency.Web.Grpc.Protos";

message OrderbookDTO{
	string ExchangeName = 1;
	string Market = 2;
}